--- a/front/package.json
+++ b/front/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "11.10.4",
     "@mui/icons-material": "5.10.3",
     "@mui/material": "5.10.4",
+    "mapbox-gl": "2.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "2.7.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
